--- a/测评填写.html
+++ b/测评填写.html
@@ -1140,35 +1140,43 @@
         <input id="u231_input" type="text" value=""/>
       </div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u232" class="ax_default label">
-        <div id="u232_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u233" class="text" style="visibility: visible;">
-          <p><span>小工具</span></p>
-        </div>
-      </div>
-
-      <!-- 更多操作 (动态面板) -->
-      <div id="u234" class="ax_default ax_default_hidden" data-label="更多操作" style="display: none; visibility: hidden">
-        <div id="u234_state0" class="panel_state" data-label="State1">
-          <div id="u234_state0_content" class="panel_state_content">
+      <!-- 小工具 (动态面板) -->
+      <div id="u232" class="ax_default" data-label="小工具">
+        <div id="u232_state0" class="panel_state" data-label="State1">
+          <div id="u232_state0_content" class="panel_state_content">
 
             <!-- Unnamed (矩形) -->
-            <div id="u235" class="ax_default box_2">
-              <div id="u235_div" class=""></div>
+            <div id="u233" class="ax_default label">
+              <div id="u233_div" class=""></div>
               <!-- Unnamed () -->
-              <div id="u236" class="text" style="visibility: visible;">
-                <p><span>计数器</span></p>
+              <div id="u234" class="text" style="visibility: visible;">
+                <p><span>小工具</span></p>
               </div>
             </div>
 
-            <!-- Unnamed (矩形) -->
-            <div id="u237" class="ax_default box_2">
-              <div id="u237_div" class=""></div>
-              <!-- Unnamed () -->
-              <div id="u238" class="text" style="visibility: visible;">
-                <p><span>计时器</span></p>
+            <!-- 更多操作 (动态面板) -->
+            <div id="u235" class="ax_default ax_default_hidden" data-label="更多操作" style="display: none; visibility: hidden">
+              <div id="u235_state0" class="panel_state" data-label="State1">
+                <div id="u235_state0_content" class="panel_state_content">
+
+                  <!-- Unnamed (矩形) -->
+                  <div id="u236" class="ax_default box_2">
+                    <div id="u236_div" class=""></div>
+                    <!-- Unnamed () -->
+                    <div id="u237" class="text" style="visibility: visible;">
+                      <p><span>计数器</span></p>
+                    </div>
+                  </div>
+
+                  <!-- Unnamed (矩形) -->
+                  <div id="u238" class="ax_default box_2">
+                    <div id="u238_div" class=""></div>
+                    <!-- Unnamed () -->
+                    <div id="u239" class="text" style="visibility: visible;">
+                      <p><span>计时器</span></p>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
