--- a/基本资料.html
+++ b/基本资料.html
@@ -85,7 +85,7 @@
         <div id="u122_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u123" class="text" style="visibility: visible;">
-          <p><span>六六脑&nbsp;&nbsp; 神经心理测评系统</span></p>
+          <p><span>六六脑&nbsp;&nbsp; HKU-AHMU神经心理测评系统</span></p>
         </div>
       </div>
 
