--- a/测评填写.html
+++ b/测评填写.html
@@ -85,7 +85,7 @@
         <div id="u891_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u892" class="text" style="visibility: visible;">
-          <p><span>六六脑&nbsp;&nbsp; 神经心理测评系统</span></p>
+          <p><span>六六脑&nbsp;&nbsp; HKU-AHMU神经心理测评系统</span></p>
         </div>
       </div>
 
