--- a/现场测评.html
+++ b/现场测评.html
@@ -94,7 +94,7 @@
         <div id="u826_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u827" class="text" style="visibility: visible;">
-          <p><span>六六脑&nbsp;&nbsp; 神经心理测评系统</span></p>
+          <p><span>六六脑&nbsp;&nbsp; HKU-AHMU神经心理测评系统</span></p>
         </div>
       </div>
 
