--- a/现场测评.html
+++ b/现场测评.html
@@ -205,7 +205,7 @@
         <img id="u850_img" class="img " src="images/现场测评/u850.png"/>
         <!-- Unnamed () -->
         <div id="u851" class="text" style="visibility: visible;">
-          <p><span>神经心理测评</span></p>
+          <p><span>HKU-AHMU神经心理测评</span></p>
         </div>
       </div>
 
@@ -214,7 +214,7 @@
         <div id="u852_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u853" class="text" style="visibility: visible;">
-          <p><span>神经心理测评</span></p>
+          <p><span>HKU-AHMU神经心理测评</span></p>
         </div>
       </div>
 
