--- a/测评记录.html
+++ b/测评记录.html
@@ -364,7 +364,7 @@
         <div id="u318_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u319" class="text" style="visibility: visible;">
-          <p><span>量表库</span></p>
+          <p><span>测评库</span></p>
         </div>
       </div>
 
