--- a/量表库.html
+++ b/量表库.html
@@ -418,7 +418,7 @@
         <div id="u676_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u677" class="text" style="visibility: visible;">
-          <p><span>量表库</span></p>
+          <p><span>测评库</span></p>
         </div>
       </div>
 
