--- a/帕金森.html
+++ b/帕金森.html
@@ -409,7 +409,7 @@
         <div id="u759_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u760" class="text" style="visibility: visible;">
-          <p><span>量表库</span></p>
+          <p><span>测评库</span></p>
         </div>
       </div>
 
