--- a/测评管理.html
+++ b/测评管理.html
@@ -391,7 +391,7 @@
         <div id="u1465_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u1466" class="text" style="visibility: visible;">
-          <p><span>量表库</span></p>
+          <p><span>测评库</span></p>
         </div>
       </div>
 
