--- a/用户管理.html
+++ b/用户管理.html
@@ -481,7 +481,7 @@
         <div id="u90_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u91" class="text" style="visibility: visible;">
-          <p><span>量表库</span></p>
+          <p><span>测评库</span></p>
         </div>
       </div>
 
