--- a/账户信息.html
+++ b/账户信息.html
@@ -324,7 +324,7 @@
         <div id="u587_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u588" class="text" style="visibility: visible;">
-          <p><span>量表库</span></p>
+          <p><span>测评库</span></p>
         </div>
       </div>
 
