--- a/语言-语言流畅性.html
+++ b/语言-语言流畅性.html
@@ -52,119 +52,128 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u1198" class="ax_default _三级标题">
-        <div id="u1198_div" class=""></div>
+      <div id="u0" class="ax_default _三级标题">
+        <div id="u0_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u1199" class="text" style="visibility: visible;">
+        <div id="u1" class="text" style="visibility: visible;">
           <p><span>语言-语言流畅性（10/13）</span></p>
         </div>
       </div>
 
       <!-- Unnamed (文本段落) -->
-      <div id="u1200" class="ax_default _文本段落">
-        <img id="u1200_img" class="img " src="images/语言-语言流畅性/u1200.png"/>
+      <div id="u2" class="ax_default _文本段落">
+        <img id="u2_img" class="img " src="images/语言-语言流畅性/regen/u2.png"/>
         <!-- Unnamed () -->
-        <div id="u1201" class="text" style="visibility: visible;">
+        <div id="u3" class="text" style="visibility: visible;">
           <p style="font-size:16px;"><span>指导语：</span><span style="font-size:14px;"></span></p><p style="font-size:14px;"><span>&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; “请您尽可能快、尽可能多地说出您所知道的动物的名称。时间是1分钟，请您想一想，准备好了吗？开始。”一分钟后停止。 </span></p>
         </div>
       </div>
 
       <!-- 搜索 (矩形) -->
-      <div id="u1202" class="ax_default primary_button" data-label="搜索">
-        <div id="u1202_div" class=""></div>
+      <div id="u4" class="ax_default primary_button" data-label="搜索">
+        <div id="u4_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u1203" class="text" style="visibility: visible;">
+        <div id="u5" class="text" style="visibility: visible;">
           <p><span>上一题</span></p>
         </div>
       </div>
 
       <!-- 搜索 (矩形) -->
-      <div id="u1204" class="ax_default primary_button" data-label="搜索">
-        <div id="u1204_div" class=""></div>
+      <div id="u6" class="ax_default primary_button" data-label="搜索">
+        <div id="u6_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u1205" class="text" style="visibility: visible;">
+        <div id="u7" class="text" style="visibility: visible;">
           <p><span>下一题</span></p>
         </div>
       </div>
 
       <!-- 搜索 (矩形) -->
-      <div id="u1206" class="ax_default primary_button" data-label="搜索">
-        <div id="u1206_div" class=""></div>
+      <div id="u8" class="ax_default primary_button" data-label="搜索">
+        <div id="u8_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u1207" class="text" style="visibility: visible;">
+        <div id="u9" class="text" style="visibility: visible;">
           <p><span>开始</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1208" class="ax_default _三级标题">
-        <div id="u1208_div" class=""></div>
+      <div id="u10" class="ax_default _三级标题">
+        <div id="u10_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u1209" class="text" style="visibility: visible;">
+        <div id="u11" class="text" style="visibility: visible;">
           <p><span>倒计时： 59s</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1210" class="ax_default _三级标题">
-        <div id="u1210_div" class=""></div>
+      <div id="u12" class="ax_default _三级标题">
+        <div id="u12_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u1211" class="text" style="visibility: visible;">
+        <div id="u13" class="text" style="visibility: visible;">
           <p><span>计数器：11</span></p>
         </div>
       </div>
 
       <!-- 搜索 (矩形) -->
-      <div id="u1212" class="ax_default primary_button" data-label="搜索">
-        <div id="u1212_div" class=""></div>
+      <div id="u14" class="ax_default primary_button" data-label="搜索">
+        <div id="u14_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u1213" class="text" style="visibility: visible;">
+        <div id="u15" class="text" style="visibility: visible;">
           <p><span>+</span></p>
         </div>
       </div>
 
       <!-- 搜索 (矩形) -->
-      <div id="u1214" class="ax_default primary_button" data-label="搜索">
-        <div id="u1214_div" class=""></div>
+      <div id="u16" class="ax_default primary_button" data-label="搜索">
+        <div id="u16_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u1215" class="text" style="visibility: visible;">
+        <div id="u17" class="text" style="visibility: visible;">
           <p><span>-</span></p>
         </div>
       </div>
 
       <!-- 搜索 (矩形) -->
-      <div id="u1216" class="ax_default primary_button" data-label="搜索">
-        <div id="u1216_div" class=""></div>
+      <div id="u18" class="ax_default primary_button" data-label="搜索">
+        <div id="u18_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u1217" class="text" style="visibility: visible;">
+        <div id="u19" class="text" style="visibility: visible;">
           <p><span>上一题</span></p>
         </div>
       </div>
 
       <!-- 搜索 (矩形) -->
-      <div id="u1218" class="ax_default primary_button" data-label="搜索">
-        <div id="u1218_div" class=""></div>
+      <div id="u20" class="ax_default primary_button" data-label="搜索">
+        <div id="u20_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u1219" class="text" style="visibility: visible;">
+        <div id="u21" class="text" style="visibility: visible;">
           <p><span>下一题</span></p>
         </div>
       </div>
 
       <!-- 搜索 (矩形) -->
-      <div id="u1220" class="ax_default primary_button" data-label="搜索">
-        <div id="u1220_div" class=""></div>
+      <div id="u22" class="ax_default primary_button" data-label="搜索">
+        <div id="u22_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u1221" class="text" style="visibility: visible;">
-          <p><span>重新开始</span></p>
+        <div id="u23" class="text" style="visibility: visible;">
+          <p><span>播放录音</span></p>
         </div>
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u1222" class="ax_default arrow">
-        <img id="u1222_img" class="img " src="images/语言-语言流畅性/u1222.png"/>
+      <div id="u24" class="ax_default arrow">
+        <img id="u24_img" class="img " src="images/语言-语言流畅性/regen/u24.png"/>
         <!-- Unnamed () -->
-        <div id="u1223" class="text" style="display: none; visibility: hidden">
+        <div id="u25" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- 搜索 (矩形) -->
+      <div id="u26" class="ax_default primary_button" data-label="搜索">
+        <div id="u26_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u27" class="text" style="visibility: visible;">
+          <p><span>重新开始</span></p>
         </div>
       </div>
     </div>
