--- a/语言-语言流畅性.html
+++ b/语言-语言流畅性.html
@@ -155,7 +155,7 @@
         <div id="u22_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u23" class="text" style="visibility: visible;">
-          <p><span>播放录音</span></p>
+          <p><span>录音中(录音组件)</span></p>
         </div>
       </div>
 
@@ -174,6 +174,24 @@
         <!-- Unnamed () -->
         <div id="u27" class="text" style="visibility: visible;">
           <p><span>重新开始</span></p>
+        </div>
+      </div>
+
+      <!-- 搜索 (矩形) -->
+      <div id="u28" class="ax_default primary_button" data-label="搜索">
+        <div id="u28_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u29" class="text" style="visibility: visible;">
+          <p><span>播放录音</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (水平线) -->
+      <div id="u30" class="ax_default arrow">
+        <img id="u30_img" class="img " src="images/语言-语言流畅性/regen/u24.png"/>
+        <!-- Unnamed () -->
+        <div id="u31" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
         </div>
       </div>
     </div>
