--- a/账户信息.html
+++ b/账户信息.html
@@ -54,123 +54,123 @@
       <!-- Unnamed (医生端) -->
 
       <!-- Unnamed (矩形) -->
-      <div id="u551" class="ax_default box_1">
-        <div id="u551_div" class=""></div>
+      <div id="u1" class="ax_default box_1">
+        <div id="u1_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u552" class="text" style="display: none; visibility: hidden">
+        <div id="u2" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (图片) -->
-      <div id="u553" class="ax_default _图片">
-        <img id="u553_img" class="img " src="images/用户管理/u3.png"/>
+      <div id="u3" class="ax_default _图片">
+        <img id="u3_img" class="img " src="images/账户信息/regen/u3.png"/>
         <!-- Unnamed () -->
-        <div id="u554" class="text" style="display: none; visibility: hidden">
+        <div id="u4" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u555" class="ax_default label">
-        <div id="u555_div" class=""></div>
+      <div id="u5" class="ax_default label">
+        <div id="u5_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u556" class="text" style="visibility: visible;">
+        <div id="u6" class="text" style="visibility: visible;">
           <p><span>赵一一</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u557" class="ax_default _一级标题">
-        <div id="u557_div" class=""></div>
+      <div id="u7" class="ax_default _一级标题">
+        <div id="u7_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u558" class="text" style="visibility: visible;">
+        <div id="u8" class="text" style="visibility: visible;">
           <p><span>六六脑&nbsp;&nbsp; ***测评系统</span></p>
         </div>
       </div>
 
       <!-- Unnamed (占位符) -->
-      <div id="u559" class="ax_default placeholder">
-        <img id="u559_img" class="img " src="images/用户管理/u9.png"/>
+      <div id="u9" class="ax_default placeholder">
+        <img id="u9_img" class="img " src="images/账户信息/regen/u9.png"/>
         <!-- Unnamed () -->
-        <div id="u560" class="text" style="visibility: visible;">
+        <div id="u10" class="text" style="visibility: visible;">
           <p><span>icon</span></p>
         </div>
       </div>
 
       <!-- Unnamed (文本段落) -->
-      <div id="u561" class="ax_default _文本段落">
-        <img id="u561_img" class="img " src="images/用户管理/u11.png"/>
+      <div id="u11" class="ax_default _文本段落">
+        <img id="u11_img" class="img " src="images/账户信息/regen/u11.png"/>
         <!-- Unnamed () -->
-        <div id="u562" class="text" style="visibility: visible;">
+        <div id="u12" class="text" style="visibility: visible;">
           <p><span>®</span></p>
         </div>
       </div>
 
       <!-- Unnamed (垂直线) -->
-      <div id="u563" class="ax_default line">
-        <img id="u563_img" class="img " src="images/用户管理/u13.png"/>
+      <div id="u13" class="ax_default line">
+        <img id="u13_img" class="img " src="images/账户信息/regen/u13.png"/>
         <!-- Unnamed () -->
-        <div id="u564" class="text" style="display: none; visibility: hidden">
+        <div id="u14" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (图片) -->
-      <div id="u565" class="ax_default _图片">
-        <img id="u565_img" class="img " src="images/用户管理/u3.png"/>
+      <div id="u15" class="ax_default _图片">
+        <img id="u15_img" class="img " src="images/账户信息/regen/u3.png"/>
         <!-- Unnamed () -->
-        <div id="u566" class="text" style="display: none; visibility: hidden">
+        <div id="u16" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u567" class="ax_default label">
-        <div id="u567_div" class=""></div>
+      <div id="u17" class="ax_default label">
+        <div id="u17_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u568" class="text" style="visibility: visible;">
+        <div id="u18" class="text" style="visibility: visible;">
           <p><span>赵一一</span></p>
         </div>
       </div>
 
       <!-- Unnamed (垂直线) -->
-      <div id="u569" class="ax_default line">
-        <img id="u569_img" class="img " src="images/用户管理/u19.png"/>
+      <div id="u19" class="ax_default line">
+        <img id="u19_img" class="img " src="images/账户信息/regen/u19.png"/>
         <!-- Unnamed () -->
-        <div id="u570" class="text" style="display: none; visibility: hidden">
+        <div id="u20" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (形状) -->
-      <div id="u571" class="ax_default box_2">
-        <img id="u571_img" class="img " src="images/用户管理/u21.png"/>
+      <div id="u21" class="ax_default box_2">
+        <img id="u21_img" class="img " src="images/账户信息/regen/u21.png"/>
         <!-- Unnamed () -->
-        <div id="u572" class="text" style="display: none; visibility: hidden">
+        <div id="u22" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- 下拉菜单 (动态面板) -->
-      <div id="u573" class="ax_default ax_default_hidden" data-label="下拉菜单" style="display: none; visibility: hidden">
-        <div id="u573_state0" class="panel_state" data-label="State1">
-          <div id="u573_state0_content" class="panel_state_content">
+      <div id="u23" class="ax_default ax_default_hidden" data-label="下拉菜单" style="display: none; visibility: hidden">
+        <div id="u23_state0" class="panel_state" data-label="State1">
+          <div id="u23_state0_content" class="panel_state_content">
 
             <!-- Unnamed (矩形) -->
-            <div id="u574" class="ax_default box_1">
-              <div id="u574_div" class=""></div>
+            <div id="u24" class="ax_default box_1">
+              <div id="u24_div" class=""></div>
               <!-- Unnamed () -->
-              <div id="u575" class="text" style="visibility: visible;">
+              <div id="u25" class="text" style="visibility: visible;">
                 <p><span>账户信息</span></p>
               </div>
             </div>
 
             <!-- Unnamed (矩形) -->
-            <div id="u576" class="ax_default box_1">
-              <div id="u576_div" class=""></div>
+            <div id="u26" class="ax_default box_1">
+              <div id="u26_div" class=""></div>
               <!-- Unnamed () -->
-              <div id="u577" class="text" style="visibility: visible;">
+              <div id="u27" class="text" style="visibility: visible;">
                 <p><span>退出</span></p>
               </div>
             </div>
@@ -179,131 +179,131 @@
       </div>
 
       <!-- Unnamed (热区) -->
-      <div id="u578" class="ax_default">
+      <div id="u28" class="ax_default">
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u579" class="ax_default label">
-        <div id="u579_div" class=""></div>
+      <div id="u29" class="ax_default label">
+        <div id="u29_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u580" class="text" style="visibility: visible;">
+        <div id="u30" class="text" style="visibility: visible;">
           <p><span>姓名</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u581" class="ax_default label">
-        <div id="u581_div" class=""></div>
+      <div id="u31" class="ax_default label">
+        <div id="u31_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u582" class="text" style="visibility: visible;">
+        <div id="u32" class="text" style="visibility: visible;">
           <p><span>钱二</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u583" class="ax_default label">
-        <div id="u583_div" class=""></div>
+      <div id="u33" class="ax_default label">
+        <div id="u33_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u584" class="text" style="visibility: visible;">
+        <div id="u34" class="text" style="visibility: visible;">
           <p><span>性别</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u585" class="ax_default label">
-        <div id="u585_div" class=""></div>
+      <div id="u35" class="ax_default label">
+        <div id="u35_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u586" class="text" style="visibility: visible;">
+        <div id="u36" class="text" style="visibility: visible;">
           <p><span>男</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u587" class="ax_default label">
-        <div id="u587_div" class=""></div>
+      <div id="u37" class="ax_default label">
+        <div id="u37_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u588" class="text" style="visibility: visible;">
+        <div id="u38" class="text" style="visibility: visible;">
           <p><span style="text-decoration:underline;">信息有误，点击修改</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u589" class="ax_default label">
-        <div id="u589_div" class=""></div>
+      <div id="u39" class="ax_default label">
+        <div id="u39_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u590" class="text" style="visibility: visible;">
+        <div id="u40" class="text" style="visibility: visible;">
           <p><span>绑定电话</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u591" class="ax_default label">
-        <div id="u591_div" class=""></div>
+      <div id="u41" class="ax_default label">
+        <div id="u41_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u592" class="text" style="visibility: visible;">
+        <div id="u42" class="text" style="visibility: visible;">
           <p><span>19999999999</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u593" class="ax_default label">
-        <div id="u593_div" class=""></div>
+      <div id="u43" class="ax_default label">
+        <div id="u43_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u594" class="text" style="visibility: visible;">
+        <div id="u44" class="text" style="visibility: visible;">
           <p><span>基本信息</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u595" class="ax_default label">
-        <div id="u595_div" class=""></div>
+      <div id="u45" class="ax_default label">
+        <div id="u45_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u596" class="text" style="visibility: visible;">
+        <div id="u46" class="text" style="visibility: visible;">
           <p><span>头像</span></p>
         </div>
       </div>
 
       <!-- Unnamed (图片) -->
-      <div id="u597" class="ax_default _图片">
-        <img id="u597_img" class="img " src="images/用户管理/u3.png"/>
+      <div id="u47" class="ax_default _图片">
+        <img id="u47_img" class="img " src="images/账户信息/regen/u3.png"/>
         <!-- Unnamed () -->
-        <div id="u598" class="text" style="display: none; visibility: hidden">
+        <div id="u48" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u599" class="ax_default link_button">
-        <div id="u599_div" class=""></div>
+      <div id="u49" class="ax_default link_button">
+        <div id="u49_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u600" class="text" style="visibility: visible;">
+        <div id="u50" class="text" style="visibility: visible;">
           <p><span style="text-decoration:underline;">修改</span></p>
         </div>
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u601" class="ax_default line">
-        <img id="u601_img" class="img " src="images/账户信息/u601.png"/>
+      <div id="u51" class="ax_default line">
+        <img id="u51_img" class="img " src="images/账户信息/regen/u51.png"/>
         <!-- Unnamed () -->
-        <div id="u602" class="text" style="display: none; visibility: hidden">
+        <div id="u52" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u603" class="ax_default label">
-        <div id="u603_div" class=""></div>
+      <div id="u53" class="ax_default label">
+        <div id="u53_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u604" class="text" style="visibility: visible;">
+        <div id="u54" class="text" style="visibility: visible;">
           <p><span>账号信息</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u605" class="ax_default label">
-        <div id="u605_div" class=""></div>
+      <div id="u55" class="ax_default label">
+        <div id="u55_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u606" class="text" style="visibility: visible;">
+        <div id="u56" class="text" style="visibility: visible;">
           <p><span style="text-decoration:underline;">修改头像</span></p>
         </div>
       </div>
@@ -311,92 +311,74 @@
       <!-- Unnamed (左导航-医生端) -->
 
       <!-- 档案 (矩形) -->
-      <div id="u608" class="ax_default box_2" data-label="档案">
-        <div id="u608_div" class=""></div>
+      <div id="u58" class="ax_default box_2" data-label="档案">
+        <div id="u58_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u609" class="text" style="visibility: visible;">
+        <div id="u59" class="text" style="visibility: visible;">
           <p><span>档案</span></p>
         </div>
       </div>
 
       <!-- 量表库 (矩形) -->
-      <div id="u610" class="ax_default box_2" data-label="量表库">
-        <div id="u610_div" class=""></div>
+      <div id="u60" class="ax_default box_2" data-label="量表库">
+        <div id="u60_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u611" class="text" style="visibility: visible;">
+        <div id="u61" class="text" style="visibility: visible;">
           <p><span>测评库</span></p>
         </div>
       </div>
 
       <!-- 测评管理 (矩形) -->
-      <div id="u612" class="ax_default box_2" data-label="测评管理">
-        <div id="u612_div" class=""></div>
+      <div id="u62" class="ax_default box_2" data-label="测评管理">
+        <div id="u62_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u613" class="text" style="visibility: visible;">
+        <div id="u63" class="text" style="visibility: visible;">
           <p><span>测评管理/测评数据/测评数据管理</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u614" class="ax_default label">
-        <div id="u614_div" class=""></div>
+      <div id="u64" class="ax_default label">
+        <div id="u64_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u615" class="text" style="visibility: visible;">
+        <div id="u65" class="text" style="visibility: visible;">
           <p><span>登录密码</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u616" class="ax_default label">
-        <div id="u616_div" class=""></div>
+      <div id="u66" class="ax_default label">
+        <div id="u66_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u617" class="text" style="visibility: visible;">
+        <div id="u67" class="text" style="visibility: visible;">
           <p><span>······</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u618" class="ax_default link_button">
-        <div id="u618_div" class=""></div>
+      <div id="u68" class="ax_default link_button">
+        <div id="u68_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u619" class="text" style="visibility: visible;">
+        <div id="u69" class="text" style="visibility: visible;">
           <p><span style="text-decoration:underline;">修改</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u620" class="ax_default label">
-        <div id="u620_div" class=""></div>
+      <div id="u70" class="ax_default label">
+        <div id="u70_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u621" class="text" style="visibility: visible;">
-          <p><span>医院</span></p>
+        <div id="u71" class="text" style="visibility: visible;">
+          <p><span>医院科室</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u622" class="ax_default label">
-        <div id="u622_div" class=""></div>
+      <div id="u72" class="ax_default label">
+        <div id="u72_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u623" class="text" style="visibility: visible;">
-          <p><span style="font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';font-weight:700;">玄武</span><span style="font-family:'PingFangSC-Semibold', 'PingFang SC Semibold', 'PingFang SC';font-weight:650;">医院</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u624" class="ax_default label">
-        <div id="u624_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u625" class="text" style="visibility: visible;">
-          <p><span>科室</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u626" class="ax_default label">
-        <div id="u626_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u627" class="text" style="visibility: visible;">
-          <p><span style="font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';font-weight:700;">康复</span><span style="font-family:'PingFangSC-Semibold', 'PingFang SC Semibold', 'PingFang SC';font-weight:650;">科</span></p>
+        <div id="u73" class="text" style="visibility: visible;">
+          <p><span style="font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';font-weight:700;">玄武</span><span style="font-family:'PingFangSC-Semibold', 'PingFang SC Semibold', 'PingFang SC';font-weight:650;">医院·康复科</span></p>
         </div>
       </div>
     </div>
